--- a/src/Styles/BoutiqueStyles/BoutiqueSideBar.css
+++ b/src/Styles/BoutiqueStyles/BoutiqueSideBar.css
@@ -16,7 +16,7 @@
   top: 0;
   left: 0; 
   filter: blur(10px);
-  pointer-events: none p !important;
+  pointer-events: none !important;
   width: 100%;
   height: calc(100vh ); /* Utiliser calc pour ajuster la hauteur correctement */
   background-color: rgba(36, 32, 32, 0.856);
@@ -31,11 +31,11 @@
     top: 6px;
     margin-top: 60px;
     box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    background-color: #fff;
 
 }
 
-.aaww{
+.sidebarleft .aaww{
     margin-top: 30px;
     height: 40px;
     text-align: center;
@@ -52,7 +52,7 @@
     cursor: pointer;
     
 }
-.aaww h5{
+.sidebarleft .aaww h5{
   padding-top: 7px;
   letter-spacing: .01785714em;
     font-family: "Google Sans",Roboto,Arial,sans-serif;
@@ -61,18 +61,17 @@
     line-height: 1.25rem;
     color: #3c4043;
 }
-.link{
+.sidebarleft .link{
     display: flex;
-    color: #fff;
-    padding: 10px 15px !important;
+    color: #0a0404;
+    padding: 10px 15px ;
     gap: 15px;
     text-decoration: none;
     transition: all 0.5s;
     font-family: cursive;
     
   }
-  .link:hover{
-    
+  .sidebarleft .link:hover{
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     background:rgb(74, 110, 133);
@@ -80,7 +79,7 @@
     color: white;
     transition: all 0.5s;
   }
-  .active{
+  .sidebarleft .active{
     margin: 2px;
     border-radius: 10px;
     background: rgba(237, 240, 241, 0.267);
