--- a/src/Styles/BoutiqueStyles/CardBoutique.css
+++ b/src/Styles/BoutiqueStyles/CardBoutique.css
@@ -10,6 +10,7 @@
   border-radius: 10px;
   background-color: rgb(252, 246, 246);
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.281);
+  cursor: pointer;
 }
 .cardBoutique:hover{
   transform: scale(1.05);
@@ -28,6 +29,7 @@
   display: flex;
   flex-direction: column;
   
+  
 }
 .cardBoutiquename h1{
   font-family: "Google Sans",Roboto,Arial,sans-serif;
@@ -35,6 +37,7 @@
     font-weight: 400;
     overflow: hidden;
     color: aliceblue;
+    
 }
 .cardBoutiquename h2{
   
@@ -89,7 +92,7 @@
 }
 .cardBoutique .footer{
   display: flex;
-  justify-content: end;
+  justify-content: space-between;
   
 }
 .cardBoutique .footer button{
@@ -101,10 +104,24 @@
  padding: 5px;
  border-radius: 50%;
 }
+.cardBoutique .footer h1{
+  margin-top: 10px;
+  margin-left: 15px;
+  font-family: "Google Sans",Roboto,Arial,sans-serif;
+    font-size:large;
+    font-weight: 400;
+    overflow: hidden;
+    color: rgb(71, 71, 71);
+    
+}
 .cardBoutique .footer button:hover{
   background-color: rgba(0, 0, 0, 0.322);
   
  }
+ .cardBoutique .footer h1:hover{ 
+  text-decoration: underline;
+  cursor: pointer;
+}
  
 
 
