--- a/src/Composants/Accounts/Style/EditPassword.css
+++ b/src/Composants/Accounts/Style/EditPassword.css
@@ -31,6 +31,19 @@ background-color: transparent;
 padding: 0.9rem;
 width: 100%;
 }
+.EditPassword .body .erreur{
+    background-color: rgba(245, 202, 202, 0.719);
+    border: 0.1em solid rgba(238, 136, 136, 0.815);
+    border-radius: 0.5em;
+    font-size: 0.8em;
+    margin-top: 0.5em;
+    padding: 0.5em;
+}
+.EditPassword .body .erreur p{
+    color: rgb(138, 0, 0);
+    font-size: 1.2em;
+    font-weight: 500;
+}
 .EditPassword .body label{
     font-size: 1em;
     font-weight: 600;
