--- a/src/Composants/LogIn&signUp/Style/login.css
+++ b/src/Composants/LogIn&signUp/Style/login.css
@@ -32,8 +32,10 @@
     width: 100%;   
 }
 .login  .header img{
-    height: 5rem;
-    width: 10rem;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    opacity: 0;
+    height: 3rem;
     margin-left: 1%;
 }
 .login .page h1{
@@ -154,6 +156,9 @@ color: #1d3469;
     }
     .alert{
         width: 80%;
+    }
+    .login  .header img{
+        opacity: 1;
     }
    
 }
