--- a/src/Composants/Store/StoreManagement/Style/Dashboard.css
+++ b/src/Composants/Store/StoreManagement/Style/Dashboard.css
@@ -3,10 +3,10 @@
     height: 100vh;
     width: 100%;
     display:grid;
-    grid-template-rows:65px auto auto;
-    grid-template-columns: 18% auto auto;
+    grid-template-rows:10% auto auto;
+    grid-template-columns: 15% auto auto;
     grid-template-areas:
-     "sidbar   navbar navbar "
+     "navbar   navbar navbar "
      " sidbar   body body "
      " sidbar   body body"
     ; 
@@ -25,19 +25,17 @@
         padding: 0;       
     }
    
-    .HomeAdmin_Dashborad .body{
-       
+    .HomeAdmin_Dashborad .abody{
+        overflow: auto;
+        background-color: whitesmoke;
         grid-area: body;
-           }
+    }
 @media screen and (max-width:800px) {
     .HomeAdmin_Dashborad{
-     
-        grid-template-columns: 30% auto auto;
+        grid-template-columns: 0 auto auto;
+    }
+    .HomeAdmin_Dashborad .sidbar{
+        display: none;
     }
 }
-@media screen and (max-width:400px) {
-    .HomeAdmin_Dashborad{
-     
-        grid-template-columns: 100% auto auto;
-    }
-}
+
