--- a/src/Composants/Store/StoreManagement/Style/Sidbar.css
+++ b/src/Composants/Store/StoreManagement/Style/Sidbar.css
@@ -1,40 +1,41 @@
 .SidbarAdmin{
     height: 100%;
     width: 100%;
-    background-color: #212631;
+    background-color:rgb(226, 226, 226);
     overflow: hidden;
  
 }
 .SidbarAdmin .header{
     position: relative;
     width: 100%;
-    height: 65px;
-    padding-top: 5px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.37);
+    height: 2%;
+    display: flex;
+    align-items: center;
 }
 .SidbarAdmin .header img{
-    width: 70%;
-    height: 100%;
+   width: 80%;
+   max-height: 80%;
 }
 .SidbarAdmin .header .close{
     display: none;
 }
 .SidbarAdmin .body{
     display: flex;
+    margin-top: 5%;
+    margin-left: 1em;
     flex-direction: column;
     align-items: center;
-    background-color: #212631;
-
 }
 .SidbarAdmin .body .link{
-    padding: 10px;
-    margin-left: 10px;
-    width: 100%;
+    width: 85%;
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
     text-decoration: none;
-    color: #FFFFFFDE;
-    font-size: 16px;
+    color: black;
+    font-size: 0.9em;
+    font-weight: 600;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin:4px;
+    margin:0.05em;
     display: flex;
 }
 .SidbarAdmin .body .link .icon{
@@ -44,45 +45,39 @@
 
 }
 .SidbarAdmin .body .link:hover{
-   border-radius:5px ;
-   border-top-left-radius:20px ;
-   border-bottom-left-radius:20px ;
-   background-color: rgba(212, 211, 211, 0.233);
+   border-radius:0.5em ;
+   background-color: rgba(250, 250, 250,0.5);
  
    
  }
- .SidbarAdmin .body .active::before{
-    content:"" ;
-    position: absolute;
-    right:0px;
-    top: 0;
-    padding: 0;
-    height: 100%;
-    width: 5px;
-    background-color: rgb(124, 160, 211);
-  }
+
  .SidbarAdmin .body .active{
-    color: white;
-    border-top-left-radius:20px ;
-    border-bottom-left-radius:20px ;
-    background-color: rgba(212, 211, 211, 0.233);
-    position: relative;
+    border-radius:0.5em ;
+    background-color: rgba(250, 250, 250,1);
    
 }
-@media screen and (max-width:400px) {
+@media screen and (max-width:803px) {
     .SidbarAdmin .header .close {
         display: inline;
-        color: white;
-        z-index: 100;
+        color:black;
         position: absolute;
         background-color: rgba(255, 255, 255, 0.1);
-        right: 5px;
-        top: 15px;
+        right: 0;
+        top: 0;
         width: 40px;
         height: 40px;
         border:none ;
         border-radius: 50px;
     }
+    .SidbarAdmin{
+        width: 30%;
+        position: relative;
+        min-width: 250px;
+        left: -50%;
+        transform: translate(50%);
+        top: 0;
+    }
+ 
 }
 
 /* Ajoutez ce code à votre fichier CSS Sidbar.css */
