--- a/src/Composants/LogIn&signUp/Style/login.css
+++ b/src/Composants/LogIn&signUp/Style/login.css
@@ -8,7 +8,7 @@
 }
 .login form {
     width: 40%;
-    height: 90%;
+    height: auto;
     background-color: white;
     position: relative;
     top:50%;
