--- a/src/Composants/Store/StoreManagement/Composants/Setting/Setting.css
+++ b/src/Composants/Store/StoreManagement/Composants/Setting/Setting.css
@@ -32,6 +32,52 @@
     align-items: center;
     justify-content: center;
 }
+.setting-content  .ProfileImages{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    max-height: 250px;
+    margin-bottom:3em ;
+    position: relative;
+}
+.setting-content  .ProfileImages .cover{
+    width: 100%;
+    height:100%;
+    max-height: 250px;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
+    background-color: #f2f2f2;
+}
+.setting-content  .ProfileImages .profileImage {
+    position: absolute;    
+    bottom: 0;
+    left: 0;
+    transform: translate(25%,30%);
+    height: 60%;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+    background-color: #f2f2f2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0.1em solid #d6d6d6;
+}
+.setting .ProfileImages .changephoto {
+    position: absolute;
+    right: 0;
+    top: 0;
+    border: none;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.3em;
+    color: rgb(110, 108, 108);
+    font-size: 1.5em;
+}
+
 .setting-content .Profile .ProfileHeader{
     margin: 0;
     border-top-left-radius: 0.4em;
