--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@
   padding: 0px;
   margin: 0px;
 }
+.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
+  padding: 0.8rem  1.5rem !important;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
+  font-weight: 400 !important;
+  font-size: 1rem !important;
+
+}
