--- a/src/Composants/LogIn&signUp/Style/ForgotPassword.css
+++ b/src/Composants/LogIn&signUp/Style/ForgotPassword.css
@@ -18,6 +18,13 @@
     transform: translate(-50%,-50%);
     
 }
+.ForgotPassword .page button{
+    background-color: transparent;
+    border: none;
+    font-size: 1.8em;
+    font-weight: bold;
+    color: black;
+}
 .ForgotPassword .page .main{
     width: 100%;
     height: 100%;
@@ -44,6 +51,7 @@
     display: flex;
     flex-direction: column;
     width: 80%;
+    margin-bottom: 0.5rem;
 }
 .ForgotPassword .page form label{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -68,6 +76,10 @@
 }
 @media screen and (max-width: 1000px) {
     .ForgotPassword .page{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
         width: 100%;
         height: 100%;
         border-radius: 0;
@@ -77,7 +89,8 @@
 .ForgotPassword .validate{
     display: flex;
     text-align: center;
-    font-size: 0.9em;
+    align-items: center;
+    font-size: 1.2em;
     flex-direction: column;
     }
 .ForgotPassword .validate p{
