--- a/src/Composants/LogIn&signUp/Style/ResetPassword.css
+++ b/src/Composants/LogIn&signUp/Style/ResetPassword.css
@@ -57,7 +57,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     width:80%;
-    margin: 5px;
+     margin-top: 1rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 17px;
     color: white;
@@ -88,4 +88,7 @@
         text-align: center;
         font-family: cursive;
     
+}
+.ResetPassword .TextField{
+    margin-bottom: 1em;
 }
