--- a/src/Composants/LogIn&signUp/Style/SignUp.css
+++ b/src/Composants/LogIn&signUp/Style/SignUp.css
@@ -27,11 +27,14 @@
     justify-content: center;
     align-items: center;
     flex-direction:column;
+    padding-top: 1em;
 }
-.SignUp .page .header{
+.SignUp form .header{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
     
 }
 .SignUp  .header img{
@@ -39,13 +42,14 @@
     margin-bottom: 1em;
     opacity: 0;
     height: 3rem;
+    width: auto;
     margin-left: 1%;
 }
 .SignUp .page  h1{
 font-size: 2rem;
 font-weight: bold;
-margin-top: -5%;
 margin-left: 2%;
+margin-bottom: 2rem;
 
 }
 .SignUp .page .TextField {
@@ -170,9 +174,11 @@ color: #1d3469;
 @media screen and (max-width: 850px) {
     .SignUp form {
         width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
         border-radius: 0px;
-        height:100%;
-
+        justify-content: center;
     }
     .Signuip  .input{
         width: 100%;
@@ -196,22 +202,33 @@ color: #1d3469;
     .SignUp{
        
     }
-    .SignUp  .header img{
+    .SignUp form .header{
         opacity: 1;
+        display: flex;
+        flex-direction: column;
+        position: static;
+        margin-top: 1em;
+    }
+    .SignUp  .header img{
+        margin-top: 1em;
+        margin-bottom: 1em;
+        opacity: 1;
+        width: 40%;
+        margin-left: 1%;
+    }
+    .SignUp .validate{
+       
+    
     }
 }
 .SignUp .validate{
-position: relative;
-top: 50%;
-left: 50%;
-transform: translate(-50%,-30%);
-display: flex;
-text-align: center;
-font-size: 0.9em;
-flex-direction: column;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    font-size: 1.2em;
+    flex-direction: column;
 }
 .SignUp .validate p{
-
     padding-left: 5%;
     padding-bottom:5%;
     padding-right: 5%;
