--- a/src/Composants/LogIn&signUp/Style/login.css
+++ b/src/Composants/LogIn&signUp/Style/login.css
@@ -25,24 +25,28 @@
     justify-content: center;
     align-items: center;
     flex-direction:column;
+    padding-top:2rem ;
 }
-.login .page .header{
+.login form .header{
     display: flex;
     flex-direction: column;
-    width: 100%;   
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
+    
 }
 .login  .header img{
     margin-top: 1em;
     margin-bottom: 1em;
     opacity: 0;
     height: 3rem;
+    width: auto;
     margin-left: 1%;
 }
 .login .page h1{
 font-size: x-large;
 font-weight: bold;
-margin:2%;
-margin-top:-2.5% ;
+margin:2% ;
 }
 .login .page .input {
     margin: 5px;
@@ -151,8 +155,11 @@ color: #1d3469;
 @media screen and (max-width: 1000px) {
     .login form {
         width: 100%;
-        height: 100vh;
-        border-radius: 0px
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        border-radius: 0px;
+        justify-content: center;
     }
     .alert{
         width: 80%;
