--- a/src/Composants/Store/CreateStore/Style/CreateStore.css
+++ b/src/Composants/Store/CreateStore/Style/CreateStore.css
@@ -14,7 +14,7 @@
     position: relative;
     top:50%;
     left:50%;
-    border-radius: 15px;
+    border-radius: 0.5rem;
     transform: translate(-50%,-50%);
     transition: height 10s ease-in-out;
 }
@@ -31,10 +31,19 @@
     .CreateStore .card .header .swiftcad{
         display: block;
     }
+    .CreateStore .card .header{
+        padding: 1rem;
+
+    }
     .CreateStore .card {
         width: 100%;
         height: 100%;
         border-radius: 0;
+         display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        align-content: center;
         
     } 
 }
