--- a/src/Composants/Store/CreateStore/Style/Five.css
+++ b/src/Composants/Store/CreateStore/Style/Five.css
@@ -11,10 +11,11 @@
     font-size:1rem;  
 }
 .five .main{
-    display: grid;
+    display: flex;
     grid-template-columns: 1fr 1fr;
     place-items: center;
     width: 100%;
+    padding: 1rem;
     margin-bottom:5rem ;
 }
 .five .main .Checkbox{
@@ -27,6 +28,34 @@
 }
 .five .main .Checkbox.do{
     border:1px solid blue ;
+}
+.five .main .error{
+    background-color: rgba(240, 177, 177, 0.658);
+    border-radius: 0.5rem;
+    width: 100%;
+    height: 100%;
+    border: 0.1rem solid red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.five .main .error button{
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    font-size: 1.2em;
+    right: 0.5em;
+    top: 0.2em;
+}
+.five .main .error p{
+   height: 100%;
+   margin: 0;
+   font-size: 1.1em;
+   padding: 1rem 1rem;
+    color:rgb(39, 38, 38);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
 }
 
 .five .footer{
