--- a/src/Composants/Store/StoreManagement/Composants/Product/AddProduct/AddProduct.css
+++ b/src/Composants/Store/StoreManagement/Composants/Product/AddProduct/AddProduct.css
@@ -134,29 +134,53 @@
     background-color: #ececec;
     border-radius: 0.5em;
     padding: 1em;
-    height: 300px;
     overflow: auto;
-
+    min-height: 300px;
+    max-height: 600px;
 }
-.AddProduct  .Uploadimages .input-files{
+.AddProduct   .Uploadimages .input-files{
     position: absolute;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.AddProduct .Uploadimages .add{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0.5em;
+}
+.AddProduct .Uploadimages .add label{
+    color: rgb(19, 18, 18);
+    background-color: #ffffff;
+    border: 0.1em solid black;
+    padding: 0.5em 1em;
+    border-radius: 0.5em;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.AddProduct  .Uploadimages .input-files label{
     border-radius: 0.5em;
     background-color: #9e9e9e;
-    transform: translate(-50%, -50%);
     border: 0.1em solid black;
     padding: 0.5em;
-    
+    cursor: pointer;   
+}
+.AddProduct  .Uploadimages .input-files p{
+   font-size: 1.1rem;
+   font-weight: 100!important;
 }
 @media screen and (max-width: 800px){
     .AddProduct{
-        padding-left: 1em;
+        padding-left:0.5em;
        justify-content: center;
-
+       align-items: center;
     }
     .AddProduct .card{
-        width: 90%;
+        width: 98%;
     }
     .AddProduct form{
         justify-content: center;
