--- a/src/Composants/Store/StoreManagement/Composants/Product/EditProduct/style/EditProduct.css
+++ b/src/Composants/Store/StoreManagement/Composants/Product/EditProduct/style/EditProduct.css
@@ -107,7 +107,8 @@
 }
 @media screen and (max-width: 800px){
     .EditProduct{
-        padding-left: 1em;
+        padding-left: 0;
+        padding: 0.5rem;
        justify-content: center;
 
     }
