--- a/src/Composants/Store/StoreManagement/Composants/Product/EditProduct/style/EditProductDetails.css
+++ b/src/Composants/Store/StoreManagement/Composants/Product/EditProduct/style/EditProductDetails.css
@@ -14,18 +14,10 @@
     padding: 0.8em;
     justify-content: space-between;
 }
-.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
-    padding: 7.5px 14px !important;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
-    font-weight: 600 !important;
-
+.EditProductDetails .SunEditor{
+    max-height: 400px;
+    overflow: auto;
 }
-.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input:focus {
-    border: 1px solid  #000000 !important;
-    z-index: 1;
-    border-radius:  0.2em;
-   
-} 
 .EditProductDetails .header h1{
     font-size: 1.2em;
     padding: 0;
