--- a/src/Composants/Store/StoreManagement/Composants/Setting/Setting.css
+++ b/src/Composants/Store/StoreManagement/Composants/Setting/Setting.css
@@ -129,7 +129,8 @@
 }
 @media screen and (max-width: 800px){
     .setting {
-        padding-left: 1em;
+        padding-left: 0;
+        padding: 0.5rem;
         margin-top: 1em;
     }
     .setting-content{
