--- a/src/Composants/Store/StoreManagement/Composants/Setting/edit/Style/EditImage.css
+++ b/src/Composants/Store/StoreManagement/Composants/Setting/edit/Style/EditImage.css
@@ -40,7 +40,16 @@ padding: 0.9rem;
     border-radius: 0.5em;
     font-size: 0.8em;
     margin-top: 0.5em;
-    padding: 0.5em;
+    padding: 0.7em;
+    position: relative;
+}
+.EditImage .body .erreur button{
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    font-size: 1.2em;
+    right: 0.5em;
+    top: 0.2em;
 }
 .EditImage .body .erreur p{
     color: rgb(138, 0, 0);
