--- a/src/Composants/Store/StoreManagement/Style/Navbar.css
+++ b/src/Composants/Store/StoreManagement/Style/Navbar.css
@@ -30,20 +30,7 @@
     margin-left: 15px;
 
 }
-.nav .navleft .link{
-    text-decoration: none;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: white;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    margin-left: 5px;
-    margin-right:5px ;}
-.nav .navleft .link:hover{
-    text-decoration: underline;
-
-  }  
+ 
 .nav .navleft button:hover{
     border-radius: 9px;
     background-color: rgba(0, 0, 0, 0.03);
@@ -55,7 +42,7 @@
     text-align: center;
 
 }
-.nav .navright button{
+.nav .navright .button{
     width: 40px;
     width: 40px;
     background-color: transparent;
@@ -63,20 +50,34 @@
     color: darkgray;
     font-size: 20px;
 }
+.nav .navright .userDropdown{
+    background-color: rgb(49, 49, 49);
+    border-radius: 0.5em;
+}
 .nav .navright .user{
     background-color: rgb(49, 49, 49);
     display: flex;
     color: rgb(236, 233, 233);
-    border-radius: 0.5em;
     padding-right: 0;
+    padding-left: 0;
     height: 2.5em;
     flex-direction: row;
     align-items: center;
     text-align: center;
-    justify-content: center;
+    justify-content: flex-start;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 600;   
+    font-weight: 600;  
+    border: 0.1rem solid rgb(102, 101, 101)    ; 
 }
+.nav .navright .user:active{
+    border-color:transparent ;
+    background-color: transparent;
+}
+.nav .navright .dropdown-toggle::after {
+    display: none;
+   
+}
+
 .nav .navright .user p{
     margin: 0;
     padding: 0;
