--- a/src/Composants/Store/StoreManagement/Composants/Setting/Setting.css
+++ b/src/Composants/Store/StoreManagement/Composants/Setting/Setting.css
@@ -32,52 +32,53 @@
     align-items: center;
     justify-content: center;
 }
-.setting-content  .ProfileImages{
+.setting .setting-content .storeimage{
+    width: 3rem;
+    height: 3rem;
+    border-radius:0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    padding: 0;
-    max-height: 250px;
-    margin-bottom:3em ;
     position: relative;
-}
-.setting-content  .ProfileImages .cover{
-    width: 100%;
-    height:100%;
-    max-height: 250px;
-    border-top-left-radius: 0.5em;
-    border-top-right-radius: 0.5em;
-    background-color: #f2f2f2;
-}
-.setting-content  .ProfileImages .profileImage {
-    position: absolute;    
-    bottom: 0;
-    left: 0;
-    transform: translate(25%,30%);
-    height: 60%;
-    aspect-ratio: 1 / 1;
-    border-radius: 50%;
-    background-color: #f2f2f2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 0.1em solid #d6d6d6;
-}
-.setting .ProfileImages .changephoto {
-    position: absolute;
-    right: 0;
-    top: 0;
-    border: none;
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.3em;
-    color: rgb(110, 108, 108);
-    font-size: 1.5em;
-}
 
+}
+.setting .setting-content .storeimage img{
+    width: 100%;
+    border-radius:0.5rem;
+}
+.setting .setting-content .storeimage button{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius:0.5rem;
+    border: none;
+    font-size: 1.4rem;
+    color: white;
+    display: none;
+}
+.setting .setting-content .storeimage:hover button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.setting .settingimage{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 0.5em;
+}
+.setting .settingimage .titre{
+    color: rgb(110, 108, 108);
+    border: none;
+    margin-left: 1em;
+}
+.setting .settingimage .titre h1{
+    font-size: 1.1em;
+    margin: 0;
+    padding: 0;
+    color: rgb(110, 108, 108);
+}
 .setting-content .Profile .ProfileHeader{
     margin: 0;
     border-top-left-radius: 0.4em;
@@ -94,7 +95,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     margin: 0.1em;
     color: rgb(110, 108, 108);
     border: none;
@@ -105,22 +105,30 @@
     color: rgb(110, 108, 108);
 }
 .setting-content .Profile .storename{
-   padding: 0.2em;
+   padding: 0.5em;
    display: flex;
    align-items: center;
    width: 90%;
+   overflow: hidden;
    border-bottom: 0.05em solid #d6d6d6;
 }
 .setting-content .Profile .storename .uhucuchzeiuceiu{
-    font-size: 1.2em;
+    font-size: 1.5rem;
     margin-right: 0.5em;
     color: rgb(110, 108, 108);
 }
 .setting-content .Profile .storename h1{
-    font-size: 0.6em;
+    font-size: 0.9rem;
     padding: 0;
     margin: 0;
     color: rgb(110, 108, 108);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.setting-content .Profile .storename h2{
+    font-size: 0.9rem;
+    padding: 0;
+    margin: 0;
+    color: rgb(37, 37, 37);
 }
 
 
@@ -135,5 +143,8 @@
     }
     .setting-content{
         width: 100%;
+    }
+    .setting-content .Profile .storename{
+        padding: 0.4em;
     }
 }
