--- a/src/Composants/LogIn&signUp/Style/EmailVerification.css
+++ b/src/Composants/LogIn&signUp/Style/EmailVerification.css
@@ -91,3 +91,14 @@
 
     background-color: rgba(8, 8, 8, 0.705);
 }
+@media screen and (max-width: 850px) {
+    .EmailVerification .card {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        border-radius: 0px;
+        justify-content: center;
+    }
+   
+}
