--- a/src/Composants/Store/StoreManagement/Composants/Product/AddProduct/AddProduct.css
+++ b/src/Composants/Store/StoreManagement/Composants/Product/AddProduct/AddProduct.css
@@ -63,6 +63,32 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: rgb(126, 125, 125);
 }
+.AddProduct .card .error{
+    background-color: rgb(235, 178, 178);
+    border: 0.1em solid rgb(83, 7, 7);
+    border-radius: 0.5em;
+    position: relative;
+}
+.AddProduct .card .error p{
+    color: rgb(83, 7, 7);
+    font-size: 1em;
+    font-weight: 400;
+    margin: 0;
+    padding: 0.5em;
+}
+.AddProduct .card .error button{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: transparent;
+    color: white;
+    border: none;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    cursor: pointer;
+    transition: 0.3s;
+   
+}
 .AddProduct .Input{
    display: flex;
    flex-direction: column;
@@ -86,6 +112,7 @@
     align-items: center;
     justify-content: space-around;
     width: 100%;
+    z-index: 1000;
 }
 .AddProduct .Save h1{
     color: rgb(255, 244, 244);
