--- a/src/Composants/Store/StoreManagement/Composants/Product/EditProduct/style/EditPhotos.css
+++ b/src/Composants/Store/StoreManagement/Composants/Product/EditProduct/style/EditPhotos.css
@@ -25,6 +25,12 @@
  padding: 1rem;
  max-width: 700px;
 }
+.EditPhotos .images .setopen_CircularProgress{
+   width: 100%;
+   display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .EditPhotos .UploadPhotos{
     padding: 1em 1em;
@@ -113,6 +119,11 @@
     width: 100%;
   
 }
+.EditPhotos h2{
+    padding: 0.8em;
+    font-size: 1.1em;
+    color: black;
+}
 .EditPhotos  .button button{
    margin-top: 0.5em;
    border-radius: 0.5em;
@@ -121,6 +132,14 @@
    background-color: #FFD814;
    font-size:0.7em ;
    font-weight: 600;
+}
+.EditPhotos .button .onClose{
+    background-color: whitesmoke;
+    border: 0.1em solid rgba(0, 0, 0, 0.425); 
+    margin-right: 1em;
+}
+.EditPhotos .button .onClose:hover{
+    background-color: #e7e7e7;
 }
 .EditPhotos  .button button:hover{
     background-color: #e6c211;
