--- a/src/Composants/Store/StoreManagement/Composants/Setting/edit/Style/EditImage.css
+++ b/src/Composants/Store/StoreManagement/Composants/Setting/edit/Style/EditImage.css
@@ -56,11 +56,37 @@ padding: 0.9rem;
     font-size: 1.2em;
     font-weight: 500;
 }
-.EditImage .body h5{
-    font-size: 1em;
-    color: black;
-}
 
+.EditImage .body .image-container{
+    display: flex;
+    justify-content:flex-start;
+    align-items: center;
+}
+.EditImage .body .image-container img{
+   width: 3rem;
+   border-radius: 0.2em;
+    height: 3rem;
+    box-shadow:  0.01em 0.01em 0.2em rgba(0, 0, 0, 0.5);
+}
+.EditImage .body .image-container button{
+    margin-left: 1em;
+    font-size: 0.8em;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(66, 66, 66);
+    background-color: white;
+    border-radius: 0.2em;
+    padding: 0.3em 0.7em;
+    border: none;
+    box-shadow: 0.01em 0.01em 0.2em rgba(0, 0, 0, 0.5);
+}
+.EditImage .body h6{
+    font-size: 0.8em;
+    font-weight: 500;
+    margin-top: 1em;
+    color: rgb(77, 76, 76);
+
+}
 .EditImage .body .button{
     display: flex;
     margin-top: 1em;
@@ -68,67 +94,21 @@ padding: 0.9rem;
     width: 100%;
   
 }
-.EditImage .body .image-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1em;
-    width: 100%;
-    position: relative;
-}
-.EditImage .body .image-container .cover{
-    width: 100%;
-    height: 100%;
-    max-height: 200px;
+.EditImage .body .button .Cancel{
+    margin-right: 1em;
+    background-color: white;
+    border: 0.01em solid black;
     border-radius: 0.5em;
-}
-.EditImage .body .image-container .Profile {
-    position: absolute;    
-    bottom: 0;
-    left: 0;
-    transform: translate(25%,30%);
-    height: 60%;
-    aspect-ratio: 1 / 1;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 0.1em solid #d6d6d6;
-}
-.EditImage .body .image-container .Profile img{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-}
-.EditImage .body .image-container button{
-    position: absolute;
-    bottom:0;
-    right: 0;
-    border-radius: 50%;
-    font-size: 1.5rem;
-    padding: 0.2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 0.1em solid rgba(0, 0, 0, 0.322);
-    background-color: rgba(0, 0, 0, 0.1);
-}
-.EditImage .body .uuu{
-   color: black;
-   background-color: rgba(0, 0, 0, 0.103);
-}
-.EditImage .body .uuu label{
-    padding: 0.1em;
-    aspect-ratio: 1 / 1;
-    border-radius: 50%;
-    cursor: pointer;
-    border: 0.1em solid rgba(0, 0, 0, 0.322);
-    font-size:1.5em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding:  0.5em 1em;
+    font-size:0.7em ;
     font-weight: 600;
+
 }
+.EditImage .body .button .Cancel:hover{
+    background-color: #e6e6e6;
+}
+
+
 .EditImage .body .button button{
    margin-top: 0.5em;
    border-radius: 0.5em;
