--- a/src/Composants/Store/StoreManagement/Composants/Setting/edit/Style/EditProfile.css
+++ b/src/Composants/Store/StoreManagement/Composants/Setting/edit/Style/EditProfile.css
@@ -66,7 +66,7 @@ padding: 0.9rem;
     width: 100%;
   
 }
-.EditProfile .body .button button{
+.EditProfile .body .button .save{
    margin-top: 0.5em;
    border-radius: 0.5em;
    padding:  0.5em 1em;
@@ -75,6 +75,22 @@ padding: 0.9rem;
    font-size:0.7em ;
    font-weight: 600;
 }
-.EditProfile .body .button button:hover{
+.EditProfile .body .button .save:hover{
     background-color: #e6c211;
+}
+.EditProfile .body .button .Cancel{
+    margin-top: 0.5em;
+    border-radius: 0.5em;
+    padding:  0.5em 1em;
+    border: 0.01em solid black;
+    background-color: white;
+    font-size:0.7em ;
+    font-weight: 600;
+    margin-right: 0.4em;
+}
+
+.EditProfile .body h6{
+    font-size: 0.8em;
+    color: rgb(94, 93, 93);
+    margin-top: 0.5em;
 }
