--- a/src/Composants/Store/StoreManagement/Style/Navbar.css
+++ b/src/Composants/Store/StoreManagement/Style/Navbar.css
@@ -5,6 +5,8 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
+    padding-right: 2em;
+    padding-right: 2em;
     border-bottom:1px solid rgba(0, 0, 0, 0.1);
 }
 .nav .navleft{
