--- a/src/Composants/SwiftCartHome/NavBar/Style/Navbar.css
+++ b/src/Composants/SwiftCartHome/NavBar/Style/Navbar.css
@@ -1,15 +1,10 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
 
 .Navbar{
-    background: #232f3e ;
+    background: #131921 ;
     border-bottom: 1px solid #232f3e;
     width: 100%;
-    height: 60px;
+    height: 10vh;
+    padding-right: 1em;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -18,27 +13,26 @@
             justify-content: space-between;
 }
 .Navbar .left{
- margin-left:1%;
- width: 20%;
+padding: 0;
+margin: 0;
+display: flex;
+align-items: center;
 }
-.Navbar .left .logo{
+ .Navbar .left .logo{
     height: 100%;
-    font: 1em sans-serif;
-    color: white;
+    width: auto;
     display: flex;
     align-items: center;
 }
-.Navbar .left .logo img{
-   height: 80%;
-   margin-left: 10%;
+ .Navbar .left .logo img{
+   height: 60%;
+   padding-left: 1em;
 
 }
 .Navbar .right{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 20%;
-    margin-right: 5%;
    height: 100%;
    display: flex;
    -webkit-box-align: center;
@@ -49,22 +43,43 @@
             justify-content: center;
     text-align: center;
 
-} 
-.Navbar .right .toggel{
-    display: none;
-    /* display: flex; */
-    color: white;
-    font-size: 1.5rem;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-    height: 100%;
-    color: white;
-    }
+}
+ 
+ .ant-menu-sub{
+    display: flex;
+    
+   }
+  .ant-menu-sub {
+     font-weight: 600;
+   }
+ .ant-menu-sub ul{
+     font-weight: 500;
+     color: cadetblue;
+     margin-left: -1em !important;
+   } 
+
+.Navbar .cybxzbxzb{
+    display: flex;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+}
+.Navbar .cybxzbxzb .cart:hover{
+   
+   border-color: whitesmoke;
+}
+.Navbar .cybxzbxzb .cart{
+    margin-right: 0.3em;
+    display: flex;
+    border: 0.15rem solid transparent;
+    border-radius: 0.3em;
+    padding: 0.4em;
+    font-size: 1.5em;
+    color: whitesmoke;
+}
+.Navbar .cybxzbxzb .cart .css-zza0ns-MuiBadge-badge {
+background-color: #ffc107;    
+}
  .right .Connexion{
     text-decoration: none;
     height: 70%;
@@ -121,151 +136,26 @@
     text-align: center;
 }
 /* ///////////////////////////NavBar2//////////// */
-.Navbar2{
-    background: #232f3e ;
-    border-bottom: 1px solid #232f3e;
-    width: 100%;
-    height: 120px;
-    display: -webkit-box;
-    display: -ms-flexbox;
+.Navbar  .right .menu button{
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-
-}
-.Navbar2 .top{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-}
-.Navbar2 .top .left .logo img{
-    height: 50%;
-}
-.Navbar2 .body{
-    height: 100%;
-    width: 80%;
-    margin-top: -1%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-}
-.Navbar2 .right{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-right: 5%;
-   height: 100%;
-   display: flex;
-   -webkit-box-align: center;
-       -ms-flex-align: center;
-           align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-
-} 
-/* /////////////////////////////////// */
-.SearchBar{  
-    width: 100%;
-
-    color: aliceblue;
-    height: 70%;
-    }
-.SearchBar form{
+    align-items: center;
+    justify-content: center;
+    justify-self: center;
+    border: none;
+    overflow: hidden;
+    font-size: 2em;
+    margin-right: 0.5em;
+    color: white;
+    padding: 0.2em;
+    border-radius: 0.2em;
     background-color: transparent;
-    height: 100%;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
 }
-.SearchBar form:hover{
-    border: 3px solid #ffc107;
-    border-radius: 10px;
+.Navbar  .right .menu button:hover{
+    transform: all 0.5s;
+   border: 0.1em solid #ffffff;
 }
-.SearchBar .style1{
-    border: 3px solid #ffc107;
-    border-radius: 10px;
-}
-.SearchBar select{
-    background-color:whitesmoke;
-    width: 20%;
-    height: 99%;
-    border: none;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius:5px ;
-}
-.SearchBar input[type="text"]:focus {
-    outline: none; /* Remove default focus outline */
-    /* Adjust padding for better appearance */
-}
+/* /////////////////////////////////// */
 
-.SearchBar input {
-    border: none;
-    padding: 2%;
-    width:70% ;
-    height: 99%;
-    max-height: 99%;
-}
-.SearchBar button{
-    background-color:#ffc107;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius:5px ;
-    border: none;
-    height: 99%;
-    width: 10%;  
-    font-size: 1.5em;
-}
-
-.hverksj{
-    background-color: rgba(0, 0, 0,0.2);
-    position: absolute;
-    width: 100%;
-    z-index: 1;
-    top:60px;
-    left: 0;
-    height: 100vh;
-}
-@media screen and (max-width: 800px) {
-    .SearchBar select{
-       display: none;
-    }
-    .SearchBar input {
-        border-bottom-left-radius: 5px;
-        border-top-left-radius:5px ;
-        width:80% ;
-      
-    }
-    .SearchBar button{
-       
-        width: 20%;  
-       
-    }
-}
 .homeMenu{
     display: flex;
     align-items: center;
@@ -279,7 +169,7 @@
 }
 .homeMenu img{
     width: 40px;
-    width: 40px;
+    height: 40px;
     border-radius: 0.5em;
     margin-left: 0.5em;
     margin-right: 0;
