add cart , wishlist and compare

--- a/src/Composants/SwiftCartHome/NavBar/Style/Navigate.css
+++ b/src/Composants/SwiftCartHome/NavBar/Style/Navigate.css
@@ -7,7 +7,7 @@
     padding: 0;
     padding-left: 1em;
 }
-.Navigate a{
+.Navigate .asdzdc{
     margin-right: 1em;
    height: 100%;
    text-decoration: none;
@@ -20,6 +20,8 @@
 
 }
 
-.Navigate a:hover{
+.Navigate .active{border-bottom: 0.2em solid white;
+}
+.Navigate .asdzdc:hover{
    border: 0.1em solid white;
 }
