--- a/src/Composants/SwiftCartHome/NavBar/Style/Navbar.css
+++ b/src/Composants/SwiftCartHome/NavBar/Style/Navbar.css
@@ -12,6 +12,12 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
 }
+@media screen and (max-width: 800px){
+    .Navbar{
+        height: 8vh;
+        border-bottom: none;
+    }
+}
 .Navbar .left{
 padding: 0;
 margin: 0;
@@ -182,4 +188,12 @@ background-color: #ffc107;
     margin: 0.1em;
     max-width: 100px;
     overflow: hidden;
+}
+.SearchBarzxpo{
+    border: none;
+    display: flex;
+    background: #131921 ;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 0.5em;
 }
